--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Mongo": "mongodb://root:rootpass@localhost:27017/?authSource=admin"
+  }
 }
