--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Mongo": "mongodb://root:rootpass@localhost:27017/?authSource=admin"
-  }
+  },
+  "Mongo": {
+    "Database": "realtyHub"
+  },
+  "AllowedCorsOrigins": [
+    "http://localhost:3000"
+  ]
 }
